GKD Pixel Refined.

--- a/handheld/gkd_pixel_uart_jack.htm
+++ b/handheld/gkd_pixel_uart_jack.htm
@@ -25,6 +25,243 @@ P.S. 需要把6顆電阻解焊掉<br><br>
 Baudrate 115200bps
 </p>
 <pre>
+U-Boot SPL 2013.07-g684b601 (Jul 17 2023 - 04:26:50)
+ERROR EPC 0x801fb580
+
+
+U-Boot 2013.07-g684b601 (Jul 17 2023 - 04:26:50)
+
+Board: GKD350
+DRAM:  128 MiB
+Now running in RAM - U-Boot at: 87fe4000
+MMC:   msc: 0
+*** Warning - bad CRC, using default environment
+
+In:    serial
+Out:   serial
+Err:   serial
+
+## Booting kernel from Legacy Image at 80600000 ...
+   Image Name:   Linux-3.10.14
+   Image Type:   MIPS Linux Kernel Image (gzip compressed)
+   Data Size:    4038343 Bytes = 3.9 MiB
+   Load Address: 80010000
+   Entry Point:  80442d90
+   Verifying Checksum ... OK
+   Uncompressing Kernel Image ... OK
+
+Starting kernel ...
+
+[    0.000000] Linux version 3.10.14 (root@avrman-virtual-machine) (gcc version 5.2.0 (Ingenic r3.2.0-gcc520 2017.08-24) ) #168 PREEMPT Wed Jan 10 07:03:26 EST 2024
+[    0.000000] bootconsole [early0] enabled
+[    0.000000] CPU0 RESET ERROR PC:801FB580
+[    0.000000] [&lt;801fb580&gt;] __delay+0x0/0x10
+[    0.000000] CPU0 revision is: 00d00100 (GameKiddy)
+[    0.000000] FPU revision is: 00b70000
+[    0.000000] cgu_sfc clk should be opened!
+[    0.000000] CCLK:1536MHz L2CLK:768Mhz H0CLK:200MHz H2CLK:200Mhz PCLK:100Mhz
+[    0.000000] Determined physical RAM map:
+[    0.000000]  memory: 005d0000 @ 00010000 (usable)
+[    0.000000]  memory: 00160000 @ 005e0000 (usable after init)
+[    0.000000] User-defined physical RAM map:
+[    0.000000]  memory: 08000000 @ 00000000 (usable)
+[    0.000000] Initrd not found or empty - disabling initrd
+[    0.000000] Zone ranges:
+[    0.000000]   Normal   [mem 0x00000000-0x07ffffff]
+[    0.000000] Movable zone start for each node
+[    0.000000] Early memory node ranges
+[    0.000000]   node   0: [mem 0x00000000-0x07ffffff]
+[    0.000000] Primary instruction cache 32kB, 8-way, VIPT, linesize 32 bytes.
+[    0.000000] Primary data cache 32kB, 8-way, VIPT, no aliases, linesize 32 bytes
+[    0.000000] MIPS secondary cache 128kB, 8-way, linesize 32 bytes.
+[    0.000000] Built 1 zonelists in Zone order, mobility grouping off.  Total pages: 32512
+[    0.000000] Kernel command line: console=ttyS1,115200n8 mem=128M@0x0 init=/linuxrc root=/dev/mmcblk0p3 rw rootdelay=1
+[    0.000000] PID hash table entries: 512 (order: -1, 2048 bytes)
+[    0.000000] Dentry cache hash table entries: 16384 (order: 4, 65536 bytes)
+[    0.000000] Inode-cache hash table entries: 8192 (order: 3, 32768 bytes)
+[    0.000000] allocated 262144 bytes of page_cgroup
+[    0.000000] please try 'cgroup_disable=memory' option if you don't want memory cgroups
+[    0.000000] Memory: 121928k/131072k available (4329k kernel code, 9144k reserved, 1619k data, 1408k init, 0k highmem)
+[    0.000000] SLUB: HWalign=32, Order=0-3, MinObjects=0, CPUs=1, Nodes=1
+[    0.000000] Preemptible hierarchical RCU implementation.
+[    0.000000] NR_IRQS:413
+[    0.000000] clockevents_config_and_register success.
+[    0.000000] Console: colour dummy device 80x25
+[    0.004515] Calibrating delay loop... 1535.18 BogoMIPS (lpj=7675904)
+[    0.097826] pid_max: default: 32768 minimum: 301
+[    0.102686] Mount-cache hash table entries: 512
+[    0.107590] Initializing cgroup subsys memory
+[    0.112808] devtmpfs: initialized
+[    0.117035] regulator-dummy: no parameters
+[    0.121211] NET: Registered protocol family 16
+[    0.135828] bio: create slab &lt;bio-0&gt; at 0
+[    0.141624] jz-dma jz-dma: JZ SoC DMA initialized
+[    0.146643] SCSI subsystem initialized
+[    0.150452] usbcore: registered new interface driver usbfs
+[    0.155988] usbcore: registered new interface driver hub
+[    0.161420] usbcore: registered new device driver usb
+[    0.166584]  (null): set:124  hold:125 dev=100000000 h=250 l=250
+[    0.172733]  (null): set:61  hold:62 dev=100000000 h=125 l=125
+[    0.178820] Advanced Linux Sound Architecture Driver Initialized.
+[    0.185150] [avrman-axp] chip id detect 0x4a !
+[    0.190158] [avrman-axp] enable dcdc2 dvm. 203 
+[    0.198741] Switching to clocksource jz_clocksource
+[    0.203790] cfg80211: Calling CRDA to update world regulatory domain
+[    0.214960] NET: Registered protocol family 2
+[    0.219686] TCP established hash table entries: 1024 (order: 1, 8192 bytes)
+[    0.226730] TCP bind hash table entries: 1024 (order: 0, 4096 bytes)
+[    0.233128] TCP: Hash tables configured (established 1024 bind 1024)
+[    0.239611] TCP: reno registered
+[    0.242832] UDP hash table entries: 256 (order: 0, 4096 bytes)
+[    0.248771] UDP-Lite hash table entries: 256 (order: 0, 4096 bytes)
+[    0.255297] NET: Registered protocol family 1
+[    0.322870] rg350_tft rg350_tft.0: lcd device(rg350_tft) register success
+[    0.330016] freq_udelay_jiffys[0].max_num = 10
+[    0.334483] cpufreq  udelay  loops_per_jiffy
+[    0.338854] 12000     59968   59968
+[    0.342120] 24000     119936  119936
+[    0.345582] 60000     299840  299840
+[    0.349007] 120000    599680  599680
+[    0.352539] 200000    999466  999466
+[    0.356136] 300000    1499200         1499200
+[    0.359779] 600000    2998400         2998400
+[    0.363487] 792000    3957888         3957888
+[    0.367206] 1008000   5037312         5037312
+[    0.370992] 1200000   5996800         5996800
+[    0.378586] squashfs: version 4.0 (2009/01/31) Phillip Lougher
+[    0.384612] exFAT: Version 1.2.9
+[    0.387982] msgmni has been set to 238
+[    0.394150] alg: No test for stdrng (krng)
+[    0.398260] io scheduler noop registered
+[    0.402219] io scheduler cfq registered (default)
+[    0.407205] jz_pwm_request, request pwm channel 0 successfully
+[    0.413110] jz_pwm_request, request pwm channel 1 successfully
+[    0.419154] pwm-backlight pwm-backlight.0: unable to request PWM, trying legacy API
+[    0.426935] pwm-backlight pwm-backlight.0: unable to request legacy PWM
+[    0.433573] pwm-backlight: probe of pwm-backlight.0 failed with error -16
+[    0.442706] jz-uart.1: ttyS1 at MMIO 0x10031000 (irq = 58) is a uart1
+[    0.449231] console [ttyS1] enabled, bootconsole disabled
+[    0.449231] console [ttyS1] enabled, bootconsole disabled
+[    0.462277] loop: module loaded
+[    0.465606] rate = 200000000, ns = 5
+[    0.469305] jz-efuse jz-efuse.0: setup vddq_protect_timer!
+[    0.475106] jz-efuse jz-efuse.0: rd_adj = 5 | rd_strobe = 0 | wr_adj = 4 | wr_strobe = 1
+[    0.483476] jz-efuse jz-efuse.0: ingenic efuse interface module registered success.
+[    0.491746] jz SADC driver registeres over!
+[    0.496290] tun: Universal TUN/TAP device driver, 1.6
+[    0.501502] tun: (C) 1999-2004 Max Krasnyansky &lt;maxk@qualcomm.com&gt;
+[    0.508083] usbcore: registered new interface driver usb-storage
+[    0.514469] mousedev: PS/2 mouse device common for all mice
+[    0.520257] usbcore: registered new interface driver xpad
+[    0.526019] input: analog joystick as /devices/virtual/input/input0
+[    0.532875] input: pwm-haptic as /devices/platform/input/input1
+[    0.539576] jz-rtc jz-rtc.0: rtc core: registered jz-rtc as rtc0
+[    0.546584] i2c /dev entries driver
+[    0.550674] wait stable.[252][cgu_msc0]
+[    0.554677] jzmmc_v1.2 jzmmc_v1.2.0: vmmc regulator missing
+[    0.593720] jzmmc_v1.2 jzmmc_v1.2.0: register success!
+[    0.599068] jzmmc_v1.2 jzmmc_v1.2.1: vmmc regulator missing
+[    0.604879] dummy sdio_private_init
+[    0.642667] mmc0: new high speed SDHC card at address 1234
+[    0.648368] jzmmc_v1.2 jzmmc_v1.2.1: register success!
+[    0.653935] mmcblk0: mmc0:1234 SA16G 14.4 GiB 
+[    0.658816] usbcore: registered new interface driver usbhid
+[    0.664874] usbhid: USB HID core driver
+[    0.668942]  mmcblk0: p1 p2 p3 p4
+[    0.674675] jz-asoc-aic jz-asoc-aic: Aic core probe success
+[    0.680518] jz-asoc-aic-i2s jz-asoc-aic-i2s: i2s platform probe success
+[    0.687620] u32 classifier
+[    0.690410]     Actions configured
+[    0.694074] TCP: cubic registered
+[    0.697497] NET: Registered protocol family 17
+[    0.702135] Key type dns_resolver registered
+[    0.709563] vsync_skip_ratio = 9
+[    0.712892] vsync_skip_map = 0x000003ff
+[    0.738413] Console: switching to colour frame buffer device 40x30
+[    1.048944] soc_vpu probe success,version:1.0.0-03203fd46d
+[    1.054832] jz-dwc2 jz-dwc2: no cgu clk check it
+[    1.059620] DWC PHY IN OTG MODE
+[    1.063457] dwc2 dwc2: Keep PHY ON
+[    1.067016] dwc2 dwc2: Using Buffer DMA mode
+[    1.071428] dwc2 dwc2: Core Release: 3.00a
+[    1.075711] dwc2 dwc2: DesignWare USB2.0 High-Speed Host Controller
+[    1.082195] dwc2 dwc2: new USB bus registered, assigned bus number 1
+[    1.089167] usb usb1: New USB device found, idVendor=1d6b, idProduct=0002
+[    1.096204] usb usb1: New USB device strings: Mfr=3, Product=2, SerialNumber=1
+[    1.103662] usb usb1: Product: DesignWare USB2.0 High-Speed Host Controller
+[    1.110839] usb usb1: Manufacturer: Linux 3.10.14 dwc2-hcd
+[    1.116533] usb usb1: SerialNumber: dwc2
+[    1.120927] hub 1-0:1.0: USB hub found
+[    1.124849] hub 1-0:1.0: 1 port detected
+[    1.129073] dwc2 dwc2: DWC2 Host Initialized
+[    1.133762] dwc2 dwc2: enter dwc2_gadget_plug_change:2592: plugin = 1 pullup_on = 0 suspend = 0
+[    1.142849] input input0: Dropping handle 'js0' from handler 'joydev'
+[    1.183631] input input0: Dropping handle 'event0' from handler 'evdev'
+[    1.223692] linkdev linkdev: Connected to device analog joystick
+[    1.229902] linkdev linkdev: linkdev handler successfully registered
+[    1.236479] platform linkdev: Driver linkdev requests probe deferral
+[    1.244143] input: gpio-keys as /devices/platform/gpio-keys/input/input2
+[    1.251199] input input2: Dropping handle 'kbd' from handler 'kbd'
+[    1.333627] platform linkdev: Connected to device gpio-keys
+[    1.339445] linkdev linkdev: Axis 16 not found on device gpio-keys
+[    1.345902] jz-rtc jz-rtc.0: setting system clock to 2019-10-10 11:06:49 UTC (1570705609)
+[    1.354369] linkdev linkdev: Axis 17 not found on device gpio-keys
+[    1.360873] input: linkdev device (Analog 2-axis 8-button 2-hat) as /devices/platform/linkdev/input/input3
+[    1.370946] soc-audio soc-audio: ASoC: machine gkd350 should use snd_soc_register_card()
+[    1.483746] gkd350-codecs 2-0010: ASoC: mux Right Line Mux has no paths
+[    1.490590] gkd350-codecs 2-0010: ASoC: mux Left Line Mux has no paths
+[    1.497348] gkd350-codecs 2-0010: ASoC: mux Right PGA Mux has no paths
+[    1.504096] gkd350-codecs 2-0010: ASoC: mux Left PGA Mux has no paths
+[    1.510763] gkd350-codecs 2-0010: ASoC: mux Differential Mux has no paths
+[    1.518322] dma dma0chan29: Channel 29 have been requested.(phy id 2,type 0x06 desc a4584000)
+[    1.527270] dma dma0chan30: Channel 30 have been requested.(phy id 1,type 0x06 desc a4585000)
+[    1.536249] soc-audio soc-audio:  gkd350-dai &lt;-&gt; jz-asoc-aic-i2s mapping ok
+[    1.546041] create ktrhead ok!
+[    2.618065] input: pmu-supplyer as /devices/platform/jz-i2c.1/i2c-1/1-0035/pmu-supplyer/input/input4
+[    2.633737] ALSA device list:
+[    2.636799]   #0: gkd350
+[    2.642018] Freeing unused kernel memory: 1408K (805e0000 - 80740000)
+e2fsck 1.42.6 (21-Sep-2012)
+ext2fs_check_if_mount: Can't check if filesystem is mounted due to missing mtab file while determining whether /dev/mmcblk0p1 is mounted.
+e2fsck 1.42.6 (21-Sep-2012)
+ext2fs_check_if_mount: Can't check if filesystem is mounted due to missing mtab file while determining whether /dev/mmcblk0p2 is mounted.
+[    2.838954] EXT4-fs (mmcblk0p1): mounting ext3 file system using the ext4 subsystem
+[    2.865134] EXT4-fs (mmcblk0p1): mounted filesystem with ordered data mode. Opts: (null)
+Starting logging: OK
+Mounting data partition...
+[    3.144538] FAT-fs (mmcblk0p4): Volume was not properly unmounted. Some data may be corrupt. Please run fsck.
+[    3.159896] EXT4-fs (mmcblk0p2): mounting ext3 file system using the ext4 subsystem
+[    3.187566] EXT4-fs (mmcblk0p2): mounted filesystem with ordered data mode. Opts: (null)
+Mounting overlay filesystem to /etc...
+mount: mounting overlay on /etc failed: No such device
+Populating /dev using udev: [    3.384267] udevd[89]: starting version 1.9
+[    3.423425] udevd[89]: specified group 'dialout' unknown
+[    3.433865] udevd[89]: specified group 'kmem' unknown
+[    3.439156] udevd[89]: specified group 'input' unknown
+[    3.453895] udevd[89]: specified group 'video' unknown
+[    3.459448] udevd[89]: specified group 'lp' unknown
+[    3.465139] udevd[89]: specified group 'cdrom' unknown
+[    3.470635] udevd[89]: specified group 'tape' unknown
+done
+Starting watchdog...
+Starting network...
+ip: SIOCGIFFLAGS: No such device
+/sbin/mkswap: /dev/mmcblk0p3: warning: wiping old swap signature.
+Setting up swapspace version 1, size = 1 GiB (1074786304 bytes)
+no label, UUID=e1dca8b9-839f-45d4-bd74-2a976f07039d
+[    5.969679] Adding 1049596k swap on /dev/mmcblk0p3.  Priority:-1 extents:1 across:1049596k SS
+vm.swappiness = 10
+
+ _________________________
+&lt; Welcome to OpenDingux ! &gt;
+ -------------------------
+        \   ^__^
+         \  (oo)\_______
+            (__)\       )\/\
+                ||----w |
+                ||     ||
+
+opendingux:/media/data/local/home #
 </pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
