--- a/driver.htm
+++ b/driver.htm
@@ -1453,6 +1453,10 @@ VxWorks</h3>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="driver/vxworks_23_09_dkm_ioctl.htm">
         IOCTL Operation</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/vxworks_23_09_dkm_select.htm">
+        Select Operation</a><br>
 </p>
 
 <br><script type="text/javascript" src="tail.js"></script>
