LDD How to find the changes of API function for all of kernel versions.

--- a/driver.htm
+++ b/driver.htm
@@ -483,7 +483,7 @@ RtlQueryRegistryValues()使用方式</a><br>
 
 <div id="ldd"></div>
 <h3><img src="img/photos/ldd.jpg" class="floatLeft"/>
-Linux Device Driver (LDD)</h3>
+Linux Device Driver(LDD)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &oplus;
@@ -756,6 +756,10 @@ Kernel command line(CONFIG_CMDLINE)加上"--"</a><br>
 &lowast;
 <a href="driver/ldd/get_pid.htm">
 如何取得目前PID</a><br>
+
+&dash;
+<a href="driver/ldd_function_diff.htm">
+如何取得API Function在Kernel版本的變動</a><br>
 
 &lowast;
 <a href="driver/ldd/brightness.htm">
