--- a/index.htm
+++ b/index.htm
@@ -6989,6 +6989,14 @@ GKD Pixel</h3>
 焊接UART(耳機孔)</a><br>
 
 &dash;
+<a href="handheld/gkd_pixel_microsd_boot_flows.htm">
+Boot Flows(MicroSD)</a><br>
+
+&dash;
+<a href="handheld/gkd_pixel_usbboot_mode.htm">
+如何進入USBBoot Mode</a><br>
+
+&dash;
 <a href="handheld/gkd_pixel_extract_kernel_from_microsd.htm">
 如何從MicroSD解出Kernel</a><br>
 <br><br><br><br>
