GKD Pixel Refined.

--- a/handheld/gkd_pixel_cmdline.htm
+++ b/handheld/gkd_pixel_cmdline.htm
@@ -2,10 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../index.htm">掌機</a> - GKD Pixel - <b>Boot Flows(MicroSD)</b></h3>
+<h3><a href="../index.htm">掌機</a> - GKD Pixel - <b>cmdline</b></h3>
 <hr size="1"><br>
-<p>
-<img src="gkd_pixel_microsd_boot_flows/1.jpg" class="maxSize">
-</p>
+<pre>
+console=ttyS1,115200n8 mem=128M@0x0 init=/linuxrc root=/dev/mmcblk0p3 rw rootdelay=1
+</pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
