--- a/mcu.htm
+++ b/mcu.htm
@@ -3058,9 +3058,13 @@ Build All</a><br>
 <b>(ARM Cortex-A53)</b> S32G399</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="mcu/s32g399/fix_ntp.htm">
-解決"ntpd -gq resulted in error"問題</a><br>
+&dash;
+<a href="mcu/s32g399_build_uboot.htm">
+Build U-Boot</a><br>
+
+&dash;
+<a href="mcu/s32g399_fix_ntp.htm">
+解決ntpd -gq resulted in error問題</a><br>
 <br><br><br><br>
 
 <div id="mips"></div>
