--- a/mcu/s32g399_fix_ntp.htm
+++ b/mcu/s32g399_fix_ntp.htm
@@ -1,52 +1,9 @@
-﻿<!--
- ____________________________________________________________
-|                                                            |
-|    DESIGN + Pat Heard { http://fullahead.org }             |
-|      DATE + 2006.09.12                                     |
-| COPYRIGHT + Free use if this notice is kept in place.      |
-|____________________________________________________________|
-
--->
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <title>司徒的教學網站</title>
-  <meta http-lowast="content-type" content="application/xhtml+xml; charset=UTF-8" />
-  <meta name="author" content="fullahead.org" />
-  <meta name="keywords" content="XHTML, CSS, template, FullAhead" />
-  <meta name="description" content="A valid, XHTML 1.0 template" />
-  <meta name="robots" content="index, follow, noarchive" />
-  <meta name="googlebot" content="noarchive" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
+<head><script type="text/javascript" src="../page_head.js"></script>
 
-  <link rel="shortcut icon" href="../../website.ico">
-  <link rel="stylesheet" type="text/css" href="../../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../../css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="../../css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="../../css/print.css" media="print" />
-  
-  <script type="text/javascript" src="../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../scripts/shBrushCpp.js"></script>
-
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
-</head>
-
-<body>
-<script type="text/javascript">SyntaxHighlighter.all();</script>
-<div id="wrapper">
-<div id="content">
-<script type="text/javascript" src="../../header.js"></script>
-<div id="page">
-<h3>S32G399</h3>
-<p><b>解決"ntpd -gq resulted in error"問題</b></p>
-<hr size="1">
+<h3><a href="../index.htm">掌機</a> - (ARM Cortex-A53) S32G399 - <b>解決ntpd -gq resulted in error問題</b></h3>
+<hr size="1"><br>
 <p>
 問題如下：
 </p>
@@ -109,7 +66,6 @@ dom0
 </p>
 <pre>
 # ~/ota/demo/ota_agents_controller.sh restart
-
 # vim /etc/ntp.conf
     driftfile /var/lib/ntp/ntp.drift
 
@@ -136,7 +92,6 @@ dom0
 </p>
 <pre>
 # ~/ota/demo/otamatic_controller.sh restart
-
 # vim ~/ota/demo/update_monitor.py
     @staticmethod
         def sync_system_datetime():
@@ -149,15 +104,7 @@ dom0
 # python3 ~/ota/demo/update_monitor.py
 </pre>
 <p>
-<img src="fix_ntp/1.jpg" class="maxSize">
+<img src="s32g399_fix_ntp/1.jpg" class="maxSize">
 </p>
 
-<p>
-<br><a href="../../mcu.htm">返回上一頁</a>
-</p>
-
-</div>
-</div>
-</div>
-</body>
-</html>
+<br><script type="text/javascript" src="../tail.js"></script>
