--- a/mcu.htm
+++ b/mcu.htm
@@ -3063,6 +3063,10 @@ Build All</a><br>
 Build U-Boot</a><br>
 
 &dash;
+<a href="mcu/s32g399_build_kernel.htm">
+Build Kernel</a><br>
+
+&dash;
 <a href="mcu/s32g399_fix_ntp.htm">
 解決ntpd -gq resulted in error問題</a><br>
 <br><br><br><br>
