GKD Pixel Added u-boot env.

--- a/index.htm
+++ b/index.htm
@@ -7020,6 +7020,10 @@ cmdline</a><br>
 kallsym</a><br>
 
 &dash;
+<a href="handheld/gkd_pixel_uboot_env.htm">
+U-Boot Env</a><br>
+
+&dash;
 <a href="handheld/gkd_pixel_boot_diagram.htm">
 Boot Diagram</a><br>
 
