GKD Pixel How to repack uImage.

--- a/index.htm
+++ b/index.htm
@@ -7004,6 +7004,10 @@ GKD Pixel</h3>
 焊接UART(耳機孔)</a><br>
 
 &dash;
+<a href="handheld/gkd_pixel_repack_uimage.htm">
+如何重新打包uImage</a><br>
+
+&dash;
 <a href="handheld/gkd_pixel_usbboot_mode.htm">
 如何進入USBBoot Mode</a><br>
 
