GKD Pixel Fixed libpng error.

--- a/index.htm
+++ b/index.htm
@@ -7016,6 +7016,10 @@ GKD Pixel</h3>
 如何從MicroSD解出Kernel</a><br>
 
 &dash;
+<a href="handheld/gkd_pixel_fix_libpng.htm">
+解決Invalid use of incomplete typedef png_info問題</a><br>
+
+&dash;
 <a href="handheld/gkd_pixel_cmdline.htm">
 cmdline</a><br>
 
