--- a/index.htm
+++ b/index.htm
@@ -7020,6 +7020,10 @@ GKD Pixel</h3>
 解決Invalid use of incomplete typedef png_info問題</a><br>
 
 &dash;
+<a href="handheld/gkd_pixel_fix_libpng14.htm">
+解決skipping incompatible libpng14.so when searching for -lpng14問題</a><br>
+
+&dash;
 <a href="handheld/gkd_pixel_cmdline.htm">
 cmdline</a><br>
 
