GKD Pixel Added pin description.

--- a/index.htm
+++ b/index.htm
@@ -6996,6 +6996,10 @@ GKD Pixel</h3>
 拆機</a><br>
 
 &dash;
+<a href="handheld/gkd_pixel_pin.htm">
+腳位</a><br>
+
+&dash;
 <a href="handheld/gkd_pixel_screen.htm">
 可視角</a><br>
 
