GKD Pixel Added an example for LED in assembly.

--- a/index.htm
+++ b/index.htm
@@ -24,6 +24,7 @@
     <a href="#pandora3">        <img src="img/photos/pandora.jpg"           class="t0" title="Pandora(Classic)"/></a>
     <a href="#a320">            <img src="img/photos/a320.jpg"              class="t0" title="Dingoo A320"/></a>
     <a href="#wiz">             <img src="img/photos/wiz.jpg"               class="t0" title="GP2X Wiz"/></a>
+    <a href="#gkd-pixel">       <img src="img/photos/gkd-pixel.jpg"         class="t0" title="GKD Pixel"/></a>
     <a href="#miyoomini">       <img src="img/photos/miyoo-mini.jpg"        class="t0" title="Miyoo Mini"/></a>
     <a href="#miyoominiplus">   <img src="img/photos/miyoo-mini-plus.jpg"   class="t0" title="Miyoo Mini Plus"/></a>
     <a href="#miyoo">           <img src="img/photos/miyoo.jpg"             class="t0" title="Miyoo"/></a>
@@ -166,7 +167,6 @@
     <a href="#retrostone">      <img src="img/photos/retrostone.jpg"        class="t0" title="RetroStone"/></a>
     <a href="#q2">              <img src="img/photos/q2.jpg"                class="t0" title="Q2"/></a>
     <a href="#jp09">            <img src="img/photos/jp09.jpg"              class="t0" title="JP09"/></a>
-    <a href="#gkd-pixel">       <img src="img/photos/gkd-pixel.jpg"         class="t0" title="GKD Pixel"/></a>
 </p>
 </div>
 
@@ -776,6 +776,91 @@ Build Pollux_dpc_set</a><br>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="handheld/wiz_asm_fiq.htm">
     Interrupt(FIQ)</a><br>
+<br><br><br><br>
+
+<div id="gkd-pixel"></div>
+<h3><img src="img/photos/gkd-pixel.jpg" class="floatLeft"/>
+GKD Pixel</h3>
+<hr size="1"><br><br><br><br><br>
+
+&dash;
+<a href="handheld/gkd_pixel_spec.htm">
+簡要規格</a><br>
+
+&dash;
+<a href="handheld/gkd_pixel_teardown.htm">
+拆機</a><br>
+
+&dash;
+<a href="handheld/gkd_pixel_pin.htm">
+腳位</a><br>
+
+&dash;
+<a href="handheld/gkd_pixel_screen.htm">
+可視角</a><br>
+
+&dash;
+<a href="handheld/gkd_pixel_uart_jack.htm">
+焊接UART(耳機孔)</a><br>
+
+&dash;
+<a href="handheld/gkd_pixel_repack_uimage.htm">
+如何重新打包uImage</a><br>
+
+&dash;
+<a href="handheld/gkd_pixel_usbboot_mode.htm">
+如何進入USBBoot Mode</a><br>
+
+&dash;
+<a href="handheld/gkd_pixel_extract_kernel_from_microsd.htm">
+如何從MicroSD解出Kernel</a><br>
+
+&dash;
+<a href="handheld/gkd_pixel_fix_libpng.htm">
+解決Invalid use of incomplete typedef png_info問題</a><br>
+
+&dash;
+<a href="handheld/gkd_pixel_fix_libpng14.htm">
+解決skipping incompatible libpng14.so when searching for -lpng14問題</a><br>
+
+&dash;
+<a href="handheld/gkd_pixel_gpio.htm">
+GPIO</a><br>
+
+&dash;
+<a href="handheld/gkd_pixel_cmdline.htm">
+cmdline</a><br>
+
+&dash;
+<a href="handheld/gkd_pixel_kallsym.htm">
+kallsym</a><br>
+
+&dash;
+<a href="handheld/gkd_pixel_uboot_env.htm">
+U-Boot Env</a><br>
+
+&dash;
+<a href="handheld/gkd_pixel_boot_diagram.htm">
+Boot Diagram</a><br>
+
+&dash;
+<a href="handheld/gkd_pixel_usb_boot_flows.htm">
+Boot Flows(USB)</a><br>
+
+&dash;
+<a href="handheld/gkd_pixel_microsd_boot_flows.htm">
+Boot Flows(MicroSD)</a><br>
+
+&oplus;
+<b>Assembly</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/gkd_pixel_asm_setup.htm">
+    開發環境</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/gkd_pixel_asm_led.htm">
+    LED</a><br>
 <br><br><br><br>
 
 <div id="miyoomini"></div>
@@ -6981,77 +7066,6 @@ JP09</h3>
 <a href="handheld/jp09_screen.htm">
 可視角</a><br>
 <br><br><br><br>
-
-<div id="gkd-pixel"></div>
-<h3><img src="img/photos/gkd-pixel.jpg" class="floatLeft"/>
-GKD Pixel</h3>
-<hr size="1"><br><br><br><br><br>
-
-&dash;
-<a href="handheld/gkd_pixel_spec.htm">
-簡要規格</a><br>
-
-&dash;
-<a href="handheld/gkd_pixel_teardown.htm">
-拆機</a><br>
-
-&dash;
-<a href="handheld/gkd_pixel_pin.htm">
-腳位</a><br>
-
-&dash;
-<a href="handheld/gkd_pixel_screen.htm">
-可視角</a><br>
-
-&dash;
-<a href="handheld/gkd_pixel_uart_jack.htm">
-焊接UART(耳機孔)</a><br>
-
-&dash;
-<a href="handheld/gkd_pixel_repack_uimage.htm">
-如何重新打包uImage</a><br>
-
-&dash;
-<a href="handheld/gkd_pixel_usbboot_mode.htm">
-如何進入USBBoot Mode</a><br>
-
-&dash;
-<a href="handheld/gkd_pixel_extract_kernel_from_microsd.htm">
-如何從MicroSD解出Kernel</a><br>
-
-&dash;
-<a href="handheld/gkd_pixel_fix_libpng.htm">
-解決Invalid use of incomplete typedef png_info問題</a><br>
-
-&dash;
-<a href="handheld/gkd_pixel_fix_libpng14.htm">
-解決skipping incompatible libpng14.so when searching for -lpng14問題</a><br>
-
-&dash;
-<a href="handheld/gkd_pixel_cmdline.htm">
-cmdline</a><br>
-
-&dash;
-<a href="handheld/gkd_pixel_kallsym.htm">
-kallsym</a><br>
-
-&dash;
-<a href="handheld/gkd_pixel_uboot_env.htm">
-U-Boot Env</a><br>
-
-&dash;
-<a href="handheld/gkd_pixel_boot_diagram.htm">
-Boot Diagram</a><br>
-
-&dash;
-<a href="handheld/gkd_pixel_usb_boot_flows.htm">
-Boot Flows(USB)</a><br>
-
-&dash;
-<a href="handheld/gkd_pixel_microsd_boot_flows.htm">
-Boot Flows(MicroSD)</a><br>
-<br><br><br><br>
-
 </p>
 
 <br><script type="text/javascript" src="tail.js"></script>
