GKD Pixel Refined.

--- a/handheld/gkd_pixel_pin.htm
+++ b/handheld/gkd_pixel_pin.htm
@@ -6,6 +6,10 @@
 <hr size="1"><br>
 <table>
   <tr><th>Pin</th><th>Description</th></tr>
+  <tr><td>PC-9</td><td>Power LED-0</td></tr>
+  <tr><td>PC-22</td><td>Power LED-1</td></tr>
+  <tr><td>PC-20</td><td>Power LED-2</td></tr>
+  <tr><td>PC-21</td><td>Power LED-3</td></tr>
   <tr><td>PC-14</td><td>LCD BL</td></tr>
 </table>
 
