GKD Pixel Refined.

--- a/handheld/gkd_pixel_gpio.htm
+++ b/handheld/gkd_pixel_gpio.htm
@@ -8,7 +8,10 @@
 <img src="gkd_pixel_gpio/1.jpg" class="maxSize"><br>
 <img src="gkd_pixel_gpio/2.jpg" class="maxSize"><br>
 <img src="gkd_pixel_gpio/3.jpg" class="maxSize"><br>
-<img src="gkd_pixel_gpio/4.jpg" class="maxSize">
+<img src="gkd_pixel_gpio/4.jpg" class="maxSize"><br><br>
+
+配置方式<br>
+<img src="gkd_pixel_gpio/5.jpg" class="maxSize">
 </p>
 
 <br><script type="text/javascript" src="../tail.js"></script>
