--- a/index.htm
+++ b/index.htm
@@ -828,6 +828,10 @@ GKD Pixel</h3>
 GPIO</a><br>
 
 &dash;
+<a href="handheld/gkd_pixel_clk.htm">
+Clock</a><br>
+
+&dash;
 <a href="handheld/gkd_pixel_cmdline.htm">
 cmdline</a><br>
 
