SK17i Added review page.

--- a/phone.htm
+++ b/phone.htm
@@ -20,6 +20,7 @@
 <div id="page"><br><br>
 <p>
     <a href="#n900">            <img src="img/photos/n900.jpg"          class="t0" title="Nokia N900"/></a>
+    <a href="#sk17i">           <img src="img/photos/sk17i.jpg"         class="t0" title="Sony Ericsson Xperia SK17i"/></a>
     <a href="#astro">           <img src="img/photos/astro.jpg"         class="t0" title="Astro Slide 5G"/></a>
     <a href="#cosmo">           <img src="img/photos/cosmo.jpg"         class="t0" title="Cosmo Communicator"/></a>
     <a href="#gemini-pda">      <img src="img/photos/gemini-pda.jpg"    class="t0" title="Gemini PDA 4G"/></a>
@@ -395,6 +396,16 @@ Mugen Power 3.7V 2400mA電池</a><br>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="phone/n900_maemo_leste_build_kernel_6_1_9.htm">
     Build Kernel 6.1.9</a><br>
+<br><br><br><br>
+
+<div id="sk17i"></div>
+<h3><img src="img/photos/sk17i.jpg" class="floatLeft"/>
+Sony Ericsson Xperia SK17i</h3>
+<hr size="1"><br><br><br><br><br>
+
+&dash;
+<a href="phone/sk17i_spec.htm">
+簡要規格</a><br>
 <br><br><br><br>
 
 <div id="astro"></div>
