--- a/phone/n900_spec.htm
+++ b/phone/n900_spec.htm
@@ -11,13 +11,13 @@
     <tr><th>CHIP</th><td>TI OMAP3430</td></tr>
     <tr><th>CPU</th><td>ARM Cortex-A8 600MHz</td></tr>
     <tr><th>GPU</th><td>PowerVR SGX530</td></tr>
-    <tr><th>MEMORY</th><td>256MB RAM and 32GB Flash</td></tr>
+    <tr><th>MEMORY</th><td>RAM 256MB<br>Flash 32GB</td></tr>
     <tr><th>CAMERA</th><td>5MP</td></tr>
     <tr><th>DISPLAY</th><td>3.5" 800x480 (Resistive)</td></tr>
-    <tr><th>SLOT</th><td>SD</td></tr>
+    <tr><th>SLOT</th><td>MicroSD</td></tr>
     <tr><th>INPUT</th><td>QWERTY</td></tr>
-    <tr><th>PORT</th><td>USB Micro B and 3.5mm Jack</td></tr>
-    <tr><th>WIRELESS</th><td>Wi-Fi and Bluetooth v2.0</td></tr>
+    <tr><th>PORT</th><td>USB Micro B<br>3.5mm Jack</td></tr>
+    <tr><th>WIRELESS</th><td>Wi-Fi<br>Bluetooth v2.0</td></tr>
     <tr><th>BATTERY</th><td>1320mA</td></tr>
     <tr><th>DIMENSION</th><td>111mm x 60mm x 18mm</td></tr>
     <tr><th>WEIGHT</th><td>181g</td></tr>
