SK17i UART modding.

--- a/phone.htm
+++ b/phone.htm
@@ -406,6 +406,10 @@ Sony Ericsson Xperia SK17i</h3>
 &dash;
 <a href="phone/sk17i_spec.htm">
 簡要規格</a><br>
+
+&dash;
+<a href="phone/sk17i_uart.htm">
+焊接UART(耳機孔)</a><br>
 <br><br><br><br>
 
 <div id="astro"></div>
