--- a/phone.htm
+++ b/phone.htm
@@ -20,7 +20,7 @@
 <div id="page"><br><br>
 <p>
     <a href="#n900">            <img src="img/photos/n900.jpg"          class="t0" title="Nokia N900"/></a>
-    <a href="#sk17i">           <img src="img/photos/sk17i.jpg"         class="t0" title="Sony Ericsson Xperia SK17i"/></a>
+    <a href="#sk17i">           <img src="img/photos/sk17i.jpg"         class="t0" title="Sony Ericsson Xperia mini pro(sk17i)"/></a>
     <a href="#astro">           <img src="img/photos/astro.jpg"         class="t0" title="Astro Slide 5G"/></a>
     <a href="#cosmo">           <img src="img/photos/cosmo.jpg"         class="t0" title="Cosmo Communicator"/></a>
     <a href="#gemini-pda">      <img src="img/photos/gemini-pda.jpg"    class="t0" title="Gemini PDA 4G"/></a>
@@ -400,7 +400,7 @@ Mugen Power 3.7V 2400mA電池</a><br>
 
 <div id="sk17i"></div>
 <h3><img src="img/photos/sk17i.jpg" class="floatLeft"/>
-Sony Ericsson Xperia SK17i</h3>
+Sony Ericsson Xperia mini pro(sk17i)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &dash;
