--- a/phone/sk17i_spec.htm
+++ b/phone/sk17i_spec.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - Sony Ericsson Xperia mini pro(sk17i) - <b>簡要規格</b></h3>
+<h3><a href="../phone.htm">手機</a> - Sony Ericsson Xperia Mini Pro(SK17i) - <b>簡要規格</b></h3>
 <hr size="1"><br>
 <p>
 簡要規格
