GKD Pixel Updated pins.

--- a/handheld/gkd_pixel_pin.htm
+++ b/handheld/gkd_pixel_pin.htm
@@ -10,6 +10,26 @@
   <tr><td>PC-22</td><td>Power LED-1</td></tr>
   <tr><td>PC-20</td><td>Power LED-2</td></tr>
   <tr><td>PC-21</td><td>Power LED-3</td></tr>
+  <tr><td>PB-23</td><td>UART1 TXD</td></tr>
+  <tr><td>PB-24</td><td>UART1 RXD</td></tr>
+  <tr><td>PC-30</td><td>Power Button</td></tr>
+  <tr><td>PB-13</td><td>UP</td></tr>
+  <tr><td>PB-7</td><td>DOWN</td></tr>
+  <tr><td>PB-8</td><td>LEFT</td></tr>
+  <tr><td>PB-14</td><td>RIGHT</td></tr>
+  <tr><td>PB-9</td><td>A</td></tr>
+  <tr><td>PB-16</td><td>B</td></tr>
+  <tr><td>PB-15</td><td>X</td></tr>
+  <tr><td>PB-6</td><td>Y</td></tr>
+  <tr><td>PC-0</td><td>SELECT(反相電位)</td></tr>
+  <tr><td>PC-1</td><td>START(反相電位)</td></tr>
+  <tr><td>PC-11</td><td>L1</td></tr>
+  <tr><td>PB-31</td><td>L2</td></tr>
+  <tr><td>PB-30</td><td>R1</td></tr>
+  <tr><td>PB-27</td><td>R2</td></tr>
+  <tr><td>PB-20</td><td>MENU</td></tr>
+  <tr><td>PB-11</td><td>VOL+</td></tr>
+  <tr><td>PB-10</td><td>VOL-</td></tr>
   <tr><td>PC-14</td><td>LCD BL</td></tr>
 </table>
 
