GKD Pixel Added GPIO test example.

--- a/index.htm
+++ b/index.htm
@@ -869,6 +869,10 @@ Boot Flows(MicroSD)</a><br>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="handheld/gkd_pixel_asm_uart.htm">
     UART</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/gkd_pixel_asm_gpio_test.htm">
+    GPIO Test</a><br>
 <br><br><br><br>
 
 <div id="miyoomini"></div>
