--- a/index.htm
+++ b/index.htm
@@ -867,6 +867,10 @@ Boot Flows(MicroSD)</a><br>
     LED</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/gkd_pixel_asm_btn.htm">
+    Button</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="handheld/gkd_pixel_asm_uart.htm">
     UART</a><br>
 
