--- a/program.htm
+++ b/program.htm
@@ -2454,16 +2454,16 @@ LeetCode</h3>
     &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>注意事項</b><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/leetcode/c_note_sort.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/leetcode_c_note_sort.htm">
         Sort</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/leetcode/c_note_array.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/leetcode_c_note_array.htm">
         Array</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/leetcode/c_note_global.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/leetcode_c_note_global.htm">
         Global Variable</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
