--- a/program.htm
+++ b/program.htm
@@ -2466,435 +2466,23 @@ LeetCode</h3>
         <a href="program/leetcode_c_note_global.htm">
         Global Variable</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/leetcode_c_1.htm">
     1. Two Sum</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_2.htm">
-    2. Add Two Numbers</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_3.htm">
-    3. Longest Substring Without Repeating Characters</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_4.htm">
-    4. Median of Two Sorted Arrays</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_5.htm">
-    5. Longest Palindromic Substring</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_6.htm">
-    6. Zigzag Conversion</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_7.htm">
-    7. Reverse Integer</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_8.htm">
-    8. String to Integer (atoi)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_9.htm">
-    9. Palindrome Number</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_13.htm">
-    13. Roman to Integer</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_14.htm">
-    14. Longest Common Prefix</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_20.htm">
-    20. Valid Parentheses</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_26.htm">
-    26. Remove Duplicates from Sorted Array</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_27.htm">
-    27. Remove Element</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_28.htm">
-    28. Implement strStr()</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_35.htm">
-    35. Search Insert Position</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_66.htm">
-    66. Plus One</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_88.htm">
-    88. Merge Sorted Array</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_108.htm">
-    108. Convert Sorted Array to Binary Search Tree</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_118.htm">
-    118. Pascal's Triangle</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_119.htm">
-    119. Pascal's Triangle II</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_121.htm">
-    121. Best Time to Buy and Sell Stock</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_136.htm">
-    136. Single Number</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_169.htm">
-    169. Majority Element</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_217.htm">
-    217. Contains Duplicate</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_219.htm">
-    219. Contains Duplicate II</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_228.htm">
-    228. Summary Ranges</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_268.htm">
-    268. Missing Number</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_283.htm">
-    283. Move Zeroes</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_303.htm">
-    303. Range Sum Query - Immutable</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_349.htm">
-    349. Intersection of Two Arrays</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_350.htm">
-    350. Intersection of Two Arrays II</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_414.htm">
-    414. Third Maximum Number</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_448.htm">
-    448. Find All Numbers Disappeared in an Array</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_561.htm">
-    561. Array Partition</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_682.htm">
-    682. Baseball Game</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_804.htm">
-    804. Unique Morse Code Words</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_832.htm">
-    832. Flipping an Image</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_905.htm">
-    905. Sort Array By Parity</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_942.htm">
-    942. DI String Match</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_961.htm">
-    961. N-Repeated Element in Size 2N Array</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1051.htm">
-    1051. Height Checker</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1252.htm">
-    1252. Cells with Odd Values in a Matrix</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1266.htm">
-    1266. Minimum Time Visiting All Points</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1295.htm">
-    1295. Find Numbers with Even Number of Digits</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1299.htm">
-    1299. Replace Elements with Greatest Element on Right Side</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1304.htm">
-    1304. Find N Unique Integers Sum up to Zero</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1313.htm">
-    1313. Decompress Run-Length Encoded List</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1337.htm">
-    1337. The K Weakest Rows in a Matrix</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1351.htm">
-    1351. Count Negative Numbers in a Sorted Matrix</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1365.htm">
-    1365. How Many Numbers Are Smaller Than the Current Number</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1389.htm">
-    1389. Create Target Array in the Given Order</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1431.htm">
-    1431. Kids With the Greatest Number of Candies</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1450.htm">
-    1450. Number of Students Doing Homework at a Given Time</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1464.htm">
-    1464. Maximum Product of Two Elements in an Array</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1470.htm">
-    1470. Shuffle the Array</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1475.htm">
-    1475. Final Prices With a Special Discount in a Shop</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1480.htm">
-    1480. Running Sum of 1d Array</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1512.htm">
-    1512. Number of Good Pairs</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1528.htm">
-    1528. Shuffle String</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1534.htm">
-    1534. Count Good Triplets</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1572.htm">
-    1572. Matrix Diagonal Sum</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1588.htm">
-    1588. Sum of All Odd Length Subarrays</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1656.htm">
-    1656. Design an Ordered Stream</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1662.htm">
-    1662. Check If Two String Arrays are Equivalent</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1672.htm">
-    1672. Richest Customer Wealth</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1684.htm">
-    1684. Count the Number of Consistent Strings</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1710.htm">
-    1710. Maximum Units on a Truck</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1720.htm">
-    1720. Decode XORed Array</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1725.htm">
-    1725. Number Of Rectangles That Can Form The Largest Square</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1732.htm">
-    1732. Find the Highest Altitude</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1748.htm">
-    1748. Sum of Unique Elements</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1773.htm">
-    1773. Count Items Matching a Rule</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1816.htm">
-    1816. Truncate Sentence</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1827.htm">
-    1827. Minimum Operations to Make the Array Increasing</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1863.htm">
-    1863. Sum of All Subset XOR Totals</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1913.htm">
-    1913. Maximum Product Difference Between Two Pairs</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1920.htm">
-    1920. Build Array from Permutation</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1929.htm">
-    1929. Concatenation of Array</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_1979.htm">
-    1979. Find Greatest Common Divisor of Array</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_2006.htm">
-    2006. Count Number of Pairs With Absolute Difference K</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_2011.htm">
-    2011. Final Value of Variable After Performing Operations</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_2032.htm">
-    2032. Two Out of Three</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_2037.htm">
-    2037. Minimum Number of Moves to Seat Everyone</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_2089.htm">
-    2089. Find Target Indices After Sorting Array</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_2108.htm">
-    2108. Find First Palindromic String in the Array</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_2114.htm">
-    2114. Maximum Number of Words Found in Sentences</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_2154.htm">
-    2154. Keep Multiplying Found Values by Two</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_2176.htm">
-    2176. Count Equal and Divisible Pairs in an Array</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_2185.htm">
-    2185. Counting Words With a Given Prefix</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_2206.htm">
-    2206. Divide Array Into Equal Pairs</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_2255.htm">
-    2255. Count Prefixes of a Given String</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_2341.htm">
-    2341. Maximum Number of Pairs in Array</a><br>
 
 &oplus;
 <b>C++</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/cpp_1.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/leetcode_cpp_1.htm">
     1. Two Sum</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/cpp_2.htm">
-    2. Add Two Numbers</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/cpp_3.htm">
-    3. Longest Substring Without Repeating Characters</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/cpp_4.htm">
-    4. Median of Two Sorted Arrays</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/cpp_5.htm">
-    5. Longest Palindromic Substring</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/cpp_6.htm">
-    6. Zigzag Conversion</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/cpp_7.htm">
-    7. Reverse Integer</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/cpp_8.htm">
-    8. String to Integer (atoi)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/cpp_9.htm">
-    9. Palindrome Number</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/cpp_228.htm">
-    228. Summary Ranges</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/cpp_268.htm">
-    268. Missing Number</a><br>
 
 &oplus;
 <b>Rust</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/rust_148.htm">
-    148. Sort List</a><br>
-    
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/rust_912.htm">
-    912. Sort an Array</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/leetcode_rust_1.htm">
+    1. Two Sum</a><br>
 <br><br><br><br>
 </p>
 
