--- a/program/leetcode_c_note_array.htm
+++ b/program/leetcode_c_note_array.htm
@@ -8,8 +8,7 @@
 二維記憶體配置方式
 </p>
 <pre class="brush:cpp">
-int** flipAndInvertImage(int **image, int imageSize, int *imageColSize, int *returnSize, int **returnColumnSizes)
-{
+int** flipAndInvertImage(int **image, int imageSize, int *imageColSize, int *returnSize, int **returnColumnSizes) {
     int **p = malloc(sizeof(int*) * imageSize);
 
     *returnSize = imageSize;
