--- a/program/leetcode_c_note_global.htm
+++ b/program/leetcode_c_note_global.htm
@@ -14,21 +14,18 @@
 int idx = 0;
 char *p = NULL;
 
-void push(char ch)
-{
+void push(char ch) {
     p[idx++] = ch;
 }
 
-void pop(void)
-{
+void pop(void) {
     if (idx &gt; 0) {
         idx-= 1;
         p[idx] = 0;
     }
 }
 
-char* removeStars(char *s)
-{
+char* removeStars(char *s) {
     int c0 = 0;
     int len = strlen(s);
 
@@ -105,21 +102,18 @@ Shadow byte legend (one shadow byte represents 8 application bytes):
 拿掉Global Variable的寫法
 </p>
 <pre class="brush:cpp">
-void push(char *p, int *idx, char ch)
-{
+void push(char *p, int *idx, char ch) {
     p[(*idx)++] = ch;
 }
 
-void pop(char *p, int *idx)
-{
+void pop(char *p, int *idx) {
     if (*idx &gt; 0) {
         (*idx)-= 1;
         p[*idx] = 0;
     }
 }
 
-char* removeStars(char *s)
-{
+char* removeStars(char *s) {
     int c0 = 0;
     int idx = 0;
     int len = strlen(s);
