--- a/program/leetcode_c_note_sort.htm
+++ b/program/leetcode_c_note_sort.htm
@@ -13,13 +13,11 @@ https://cplusplus.com/reference/cstdlib/qsort/<br><br>
 <pre class="brush:cpp">
 int values[] = {40, 10, 100, 90, 20, 25};
 
-int compare(const void *a, const void *b)
-{
+int compare(const void *a, const void *b) {
     return (*(int*)a - *(int*)b);
 }
 
-int main(int argc, char **argv)
-{
+int main(int argc, char **argv) {
     qsort(values, 6, sizeof(int), compare);
     return 0;
 }
