--- a/program.htm
+++ b/program.htm
@@ -2470,6 +2470,10 @@ LeetCode</h3>
     <a href="program/leetcode_c_1.htm">
     1. Two Sum</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/leetcode_c_2.htm">
+    2. Add Two Numbers</a><br>
+
 &oplus;
 <b>C++</b><br>
 
@@ -2477,12 +2481,20 @@ LeetCode</h3>
     <a href="program/leetcode_cpp_1.htm">
     1. Two Sum</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/leetcode_cpp_2.htm">
+    2. Add Two Numbers</a><br>
+
 &oplus;
 <b>Rust</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="program/leetcode_rust_1.htm">
     1. Two Sum</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/leetcode_rust_2.htm">
+    2. Add Two Numbers</a><br>
 <br><br><br><br>
 </p>
 
