--- a/index.htm
+++ b/index.htm
@@ -131,6 +131,7 @@
     <a href="#q8">              <img src="img/photos/q8.jpg"                class="t0" title="Q8"/></a>
     <a href="#gamepi20">        <img src="img/photos/gamepi20.jpg"          class="t0" title="GamePi20"/></a>
     <a href="#x6">              <img src="img/photos/x6.jpg"                class="t0" title="X6"/></a>
+    <a href="#x6-1">            <img src="img/photos/x6-1.jpg"              class="t0" title="X6"/></a>
     <a href="#fc520">           <img src="img/photos/fc520.jpg"             class="t0" title="RG FC520"/></a>
     <a href="#q20mini">         <img src="img/photos/q20mini.jpg"           class="t0" title="Q20 Mini"/></a>
     <a href="#rg300x">          <img src="img/photos/rg300x.jpg"            class="t0" title="RG300X"/></a>
@@ -6397,6 +6398,31 @@ X6</h3>
 &lowast;
 <a href="handheld/x6/screen.htm">
 可視角</a><br>
+<br><br><br><br>
+
+<div id="x6-1"></div>
+<h3><img src="img/photos/x6-1.jpg" class="floatLeft"/>
+X6</h3>
+<hr size="1"><br><br><br><br><br>
+&dash;
+<a href="handheld/x6-1_spec.htm">
+簡要規格</a><br>
+
+&dash;
+<a href="handheld/x6-1_teardown.htm">
+拆機</a><br>
+
+&dash;
+<a href="handheld/x6-1_screen.htm">
+可視角</a><br>
+
+&dash;
+<a href="handheld/x6-1_dump.htm">
+Dump SPI</a><br>
+
+&dash;
+<a href="handheld/x6-1_atj2273_pin.htm">
+ATJ2273腳位</a><br>
 <br><br><br><br>
 
 <div id="fc520"></div>
