GB300 Added gb300 pages.

--- a/index.htm
+++ b/index.htm
@@ -168,6 +168,7 @@
     <a href="#retrostone">      <img src="img/photos/retrostone.jpg"        class="t0" title="RetroStone"/></a>
     <a href="#q2">              <img src="img/photos/q2.jpg"                class="t0" title="Q2"/></a>
     <a href="#jp09">            <img src="img/photos/jp09.jpg"              class="t0" title="JP09"/></a>
+    <a href="#gb300">           <img src="img/photos/gb300.jpg"             class="t0" title="GB300"/></a>
 </p>
 </div>
 
@@ -7117,6 +7118,20 @@ JP09</h3>
 
 &dash;
 <a href="handheld/jp09_screen.htm">
+可視角</a><br>
+<br><br><br><br>
+
+<div id="gb300"></div>
+<h3><img src="img/photos/gb300.jpg" class="floatLeft"/>
+GB300</h3>
+<hr size="1"><br><br><br><br><br>
+
+&dash;
+<a href="handheld/gb300_teardown.htm">
+拆機</a><br>
+
+&dash;
+<a href="handheld/gb300_screen.htm">
 可視角</a><br>
 <br><br><br><br>
 </p>
