Pandora How to prepare the developing enviorinment.

--- a/index.htm
+++ b/index.htm
@@ -426,6 +426,10 @@ UART改造</a><br>
     如何透過USB Mini B登入SSH</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_build_env.htm">
+    安裝開發環境</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="handheld/pandora_rebirth_superzaxxon_bwidget.htm">
     安裝BWidget</a><br>
 
