--- a/program/gnu_cpp_tcp_hello.htm
+++ b/program/gnu_cpp_tcp_hello.htm
@@ -5,6 +5,9 @@
 <h3><a href="../program.htm">程式語言</a> - GNU - C/C++ - <b>TCP Server、Client</b></h3>
 <hr size="1"><br>
 <p>
+參考資訊：<br>
+https://www.geeksforgeeks.org/socket-programming-cc/<br><br>
+
 server.c
 </p>
 <pre class="brush:cpp">
